--- a/src/App.css
+++ b/src/App.css
@@ -388,6 +388,7 @@ top:90px;
   .start {
     display: flex;
     align-items: center;
+
   }
   .Name {
     font-size: 30px !important;
@@ -485,4 +486,27 @@ top:90px;
   width: 88%;
   margin-bottom: 60px;
 }
+.pad{
+  padding: 0;
 }
+.burger{
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 18px;
+}
+.cart_items{
+  width: 95%;
+  position: absolute;
+  z-index: 3000;
+  top: 80px;
+  right: 0;
+  margin-right: 10px;
+  height: 200px;
+}
+.items{
+  top: -8px;
+  position: absolute;
+}
+}
+
